Our Origin History  section responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -268,18 +268,19 @@
                 <div class="origin-content">
                     <p>Since Year 1999</p>
                     <h3 class="products-title">We are <span>Frutikha</span></h3>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Est iste excepturi quae optio modi a quisquam
-                        praesentium quia. Fugiat ad similique minima officia
-                        aspernatur ipsa aperiam aut vero rerum modi aliquid
-                        nostrum.
+                    <p class="origin-details">
+                        Our journey began in 1990 as a small family-run fruit
+                        shop in the heart of the local market. With a passion
+                        for fresh, high-quality produce, we built strong
+                        relationships with local farmers. Over the years, we’ve
+                        grown while staying true to our roots—providing the
+                        community with the freshest fruits and friendly service.
                     </p>
                     <br />
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Quibusdam cum ducimus molestiae numquam officia neque
-                        libero iste non, excepturi illo!
+                    <p class="origin-details">
+                        Today, we continue delivering fresh fruits while
+                        embracing modern convenience through our online
+                        platform.
                     </p>
                     <a href="#">
                         <button class="btn">Know More</button>
