News section responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -310,8 +310,9 @@
                 <div class="news-card-header products-details">
                     <h3 class="products-title"><span>Our</span> News</h3>
                     <p class="products-brief">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Vitae, tenetur.
+                        Stay informed with our latest news, updates, and
+                        insights on company milestones, industry trends, and
+                        upcoming events.
                     </p>
                 </div>
 
