responsive for max 576px  mobile device

--- a/index.html
+++ b/index.html
@@ -479,69 +479,71 @@
         <footer>
             <section class="footer-container">
                 <div class="footer-info-container">
-                    <div class="about-content">
-                        <h3>About us</h3>
-                        <p>
-                            We create professional, responsive web templates
-                            tailored for agencies and consultancy firms,
-                            enhancing brand identity, user engagement, and
-                            online presence with modern design, seamless
-                            functionality, and optimized performance across
-                            devices.
-                        </p>
-                    </div>
+                    <div class="info-container">
+                        <div class="about-content">
+                            <h3>About us</h3>
+                            <p>
+                                We create professional, responsive web templates
+                                tailored for agencies and consultancy firms,
+                                enhancing brand identity, user engagement, and
+                                online presence with modern design, seamless
+                                functionality, and optimized performance across
+                                devices.
+                            </p>
+                        </div>
 
-                    <div class="get-touch-content">
-                        <h3>Get In Touch</h3>
-                        <p>Muladi, Barishal, Bangladesh</p>
-                        <p>support@frutikha.com</p>
-                        <p>+88 012 345 6789</p>
-                    </div>
+                        <div class="get-touch-content">
+                            <h3>Get In Touch</h3>
+                            <p>Muladi, Barishal, Bangladesh</p>
+                            <p>support@frutikha.com</p>
+                            <p>+88 012 345 6789</p>
+                        </div>
 
-                    <div class="pages-content">
-                        <h3>Pages</h3>
-                        <ul>
-                            <li>
-                                <img
-                                    src="./images/icons/link-arrow.png"
-                                    alt=""
-                                    srcset=""
-                                />
-                                <a href="">Home</a>
-                            </li>
-                            <li>
-                                <img
-                                    src="./images/icons/link-arrow.png"
-                                    alt=""
-                                    srcset=""
-                                />
-                                <a href="">About</a>
-                            </li>
-                            <li>
-                                <img
-                                    src="./images/icons/link-arrow.png"
-                                    alt=""
-                                    srcset=""
-                                />
-                                <a href="">Shop</a>
-                            </li>
-                            <li>
-                                <img
-                                    src="./images/icons/link-arrow.png"
-                                    alt=""
-                                    srcset=""
-                                />
-                                <a href="">News</a>
-                            </li>
-                            <li>
-                                <img
-                                    src="./images/icons/link-arrow.png"
-                                    alt=""
-                                    srcset=""
-                                />
-                                <a href="">Contact</a>
-                            </li>
-                        </ul>
+                        <div class="pages-content">
+                            <h3>Pages</h3>
+                            <ul>
+                                <li>
+                                    <img
+                                        src="./images/icons/link-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <a href="">Home</a>
+                                </li>
+                                <li>
+                                    <img
+                                        src="./images/icons/link-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <a href="">About</a>
+                                </li>
+                                <li>
+                                    <img
+                                        src="./images/icons/link-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <a href="">Shop</a>
+                                </li>
+                                <li>
+                                    <img
+                                        src="./images/icons/link-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <a href="">News</a>
+                                </li>
+                                <li>
+                                    <img
+                                        src="./images/icons/link-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <a href="">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="subscribe-content">
